feat: fix the structure of the admin dashboard layout.

--- a/index.html
+++ b/index.html
@@ -13,241 +13,249 @@
 </head>
 
 <body>
-    <aside class="sidebar">
-        <div class="sidebar-header">
-            <div class="logo"></div>
-            <div class="logo-name">Dashboard</div>
-        </div>
 
-        <nav class="navbar">
+    <div class="dashboard-container">
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <div class="logo"></div>
+                <div class="logo-name">Dashboard</div>
+            </div>
 
-            <ul class="nav-menu">
+            <nav class="navbar">
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
-                </li>
+                <ul class="nav-menu">
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Profile</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Messages</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Profile</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">History</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Messages</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Tasks</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">History</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Communities</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Tasks</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Settings</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Communities</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Support</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Settings</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Privacy</a>
-                </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Support</a>
+                    </li>
 
-            </ul>
-        </nav>
-    </aside>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Privacy</a>
+                    </li>
 
-    <header class="header-menu">
+                </ul>
+            </nav>
+        </aside>
 
-        <div class="search-bar">
+        <header class="header-menu">
 
-            <form action="#" class="search-container">
-                <button type="submit">Submit</button>
-                <input type="search" name="q" placeholder="Search...">
-            </form>
+            <div class="search-bar">
 
-            <div class="header-actions">
-                <button class="notification-btn"></button>
-                <div class="user-profile">
-                    <div class="user-avatar"></div>
-                    <span>Marwa Lachgar</span>
+                <form action="#" class="search-container">
+                    <button type="submit">Submit</button>
+                    <input type="search" name="q" placeholder="Search...">
+                </form>
+
+                <div class="header-actions">
+                    <button class="notification-btn"></button>
+                    <div class="user-profile">
+                        <div class="user-avatar"></div>
+                        <span>Marwa Lachgar</span>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <section class="welcome-section">
+            <section class="welcome-section">
 
-            <div class="user-avatar"></div>
+                <div class="user-avatar"></div>
 
-            <div class="welcome-text">
-                <h2>Hi there,</h2>
-                <p>Marwa Lachgar (@Polymorpheteen)</p>
-            </div>
+                <div class="welcome-text">
+                    <h2>Hi there,</h2>
+                    <p>Marwa Lachgar (@Polymorpheteen)</p>
+                </div>
 
-            <div class="action-buttons">
-                <button class="btn btn-primary">New</button>
-                <button class="btn btn-primary">Upload</button>
-                <button class="btn btn-primary">Share</button>
-            </div>
-        </section>
-
-    </header>
-
-    <main class="main-content">
-        <div class="content-grid">
-            <section class="project-section">
-                <h3>Your Projects</h3>
-                <div class="project-grid">
-                    <div class="project-card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis
-                            accumsan nec.</p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <h4>Less Cool Project</h4>
-                        <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt,
-                            consectetur
-                            sapien et, facilisis dolor.</p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <h4>Impossible Project</h4>
-                        <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
-                        </p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <h4>Easy Peasy Project</h4>
-                        <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam.
-                        </p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <h4>Ad Blocker</h4>
-                        <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis.
-                        </p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <h4>Money Maker</h4>
-                        <p>Praesent convallis libero quis congue elementum. Nunc ante faucibus sapien, ac scelerisque
-                            tortor
-                            purus sit amet ex.</p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <h4>Super Cool Project</h4>
-                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis
-                            accumsan nec.</p>
-                        <div class="project-actions">
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                            <button class="action-icon"></button>
-                        </div>
-                    </div>
+                <div class="action-buttons">
+                    <button class="btn btn-primary">New</button>
+                    <button class="btn btn-primary">Upload</button>
+                    <button class="btn btn-primary">Share</button>
                 </div>
             </section>
 
-            <aside class="sidebar-content">
+        </header>
 
-                <section>
-                    <h3>Annoucements</h3>
-                    <div class="annoucement-item">
-                        <h4>Site Maintenance</h4>
-                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
-                            congue...</p>
+        <main class="main-content">
+            <div class="content-grid">
+                <section class="project-section">
+                    <h3>Your Projects</h3>
+                    <div class="project-grid">
+                        <div class="project-card">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis
+                                felis
+                                accumsan nec.</p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <h4>Less Cool Project</h4>
+                            <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt,
+                                consectetur
+                                sapien et, facilisis dolor.</p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <h4>Impossible Project</h4>
+                            <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis
+                                id.
+                            </p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <h4>Easy Peasy Project</h4>
+                            <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan
+                                aliquam.
+                            </p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <h4>Ad Blocker</h4>
+                            <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit
+                                felis.
+                            </p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <h4>Money Maker</h4>
+                            <p>Praesent convallis libero quis congue elementum. Nunc ante faucibus sapien, ac
+                                scelerisque
+                                tortor
+                                purus sit amet ex.</p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <h4>Super Cool Project</h4>
+                            <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis
+                                felis
+                                accumsan nec.</p>
+                            <div class="project-actions">
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                                <button class="action-icon"></button>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="annoucement-item">
-                        <h4>Community Share Day</h4>
-                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan
-                            porttitor...</p>
-                    </div>
-
-                    <div class="annoucement-item">
-                        <h4>Updated Privacy Policy</h4>
-                        <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla
-                            sagittis sem in mattis...</p>
-                    </div>
-
                 </section>
 
-                <section>
-                    <h3>Trending</h3>
-                    <div class="tending-item">
-                        <div class="trending-avatar"></div>
-                        <div class="trending-information">
-                            <h4>@tegan</h4>
-                            <p>World Peace Builder</p>
+                <aside class="sidebar-content">
+
+                    <section>
+                        <h3>Annoucements</h3>
+                        <div class="annoucement-item">
+                            <h4>Site Maintenance</h4>
+                            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
+                                congue...</p>
                         </div>
-                    </div>
 
-                    <div class="tending-item">
-                        <div class="trending-avatar"></div>
-                        <div class="trending-information">
-                            <h4>@Polymorpheteen</h4>
-                            <p>Super Cool Project</p>
+                        <div class="annoucement-item">
+                            <h4>Community Share Day</h4>
+                            <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan
+                                porttitor...</p>
                         </div>
-                    </div>
 
-                    <div class="tending-item">
-                        <div class="trending-avatar"></div>
-                        <div class="trending-information">
-                            <h4>@kendall</h4>
-                            <p>Life Changing App</p>
+                        <div class="annoucement-item">
+                            <h4>Updated Privacy Policy</h4>
+                            <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras
+                                fringilla
+                                sagittis sem in mattis...</p>
                         </div>
-                    </div>
 
-                    <div class="tending-item">
-                        <div class="trending-avatar"></div>
-                        <div class="trending-information">
-                            <h4>@alex</h4>
-                            <p>No Traffic Maker</p>
+                    </section>
+
+                    <section>
+                        <h3>Trending</h3>
+                        <div class="tending-item">
+                            <div class="trending-avatar"></div>
+                            <div class="trending-information">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
                         </div>
-                    </div>
-                </section>
-            </aside>
-        </div>
 
-    </main>
+                        <div class="tending-item">
+                            <div class="trending-avatar"></div>
+                            <div class="trending-information">
+                                <h4>@Polymorpheteen</h4>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
 
+                        <div class="tending-item">
+                            <div class="trending-avatar"></div>
+                            <div class="trending-information">
+                                <h4>@kendall</h4>
+                                <p>Life Changing App</p>
+                            </div>
+                        </div>
+
+                        <div class="tending-item">
+                            <div class="trending-avatar"></div>
+                            <div class="trending-information">
+                                <h4>@alex</h4>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </div>
+                    </section>
+                </aside>
+            </div>
+        </main>
+    </div>
 </body>
 
 </html>
